[tool.pdm]

[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Taras Nytiaha", email = "taras.nytiaha@gmail.com"},
]
dependencies = [
    "django>=4.2.1",
    "django-jsonfield>=1.4.1",
    "asyncio>=3.4.3",
    "ipython>=8.13.2",
    "aiohttp>=3.8.4",
    "beautifulsoup4>=4.12.2",
    "requests>=2.30.0",
    "lxml>=4.9.2",
    "aiofiles>=23.1.0",
    "mypy>=1.3.0",
    "types-aiofiles>=23.1.0.2",
]
requires-python = ">=3.10"
license = {text = "MIT"}

[tool.pdm.scripts]
mypy = "mypy run.py"
parser = "python run.py"